--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   quickalert: ^1.1.0
   intl: ^0.20.2
   image_picker: ^1.0.7
+  url_launcher: ^6.3.0
+  geolocator: ^10.1.0
+  geolocator_web: ^2.2.1
+  image_picker_for_web: ^3.0.2
+  camera: ^0.11.0+1
+  camera_web: ^0.3.5
+  flutter_webrtc: ^0.9.20
 
 dev_dependencies:
   flutter_test:
